# album_creator

./: .gitignore  Cargo.toml  README.md  index.html
assets/: album.css  album_list.css  all.css  btn_icon.css  confirm.css  edit_album.css  header.css  login.css  menu.css  style.css  toast.css
design/: palette.md
src/: lib.rs
src/components/: album.rs  album_list.rs  confirm.rs  edit_album.rs  header.rs  login.rs  main.rs  menu.rs  mod.rs  new_album.rs  pic_upload.rs  picture.rs  play.rs  toast.rs
src/conf/: api_secret.rs  mod.rs  vars.rs
src/models/: album.rs  mod.rs  picture.rs  toast.rs
src/utils/: busvars.rs  conf_util.rs  deserializer.rs  mod.rs  parser.rs  pubvars.rs  request.rs  serializer.rs  style.rs  vars.rs
