[package]
version = "0.1.0"
name = "album_creator"
repository = "https://github.com/TuntematonSotilas/album_creator"
authors = ["TuntematonSotilas"]
description = "Album Creator"
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
seed = "0.8.0"
serde = { version = "1.0.117", features = ["derive"] }
base64 = "0.13.0"
friendly_id = "0.3.0"
web-sys = "0.3.46"
gloo-file = "0.1.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
